--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="logo.png" alt="Spotify"> Spotify</li>
+            <li class="brand"><img src="logo.png" alt="Music play"> Music play</li>
             <li>Home</li>
             <li>About</li>
         </ul>
